# netwatch-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
launchd/: com.netwatch.collect.plist.template
netwatch/: __init__.py  archiver.py  cli.py  config.py  models.py  scheduler.py
netwatch/collector/: dns.py  latency.py  speed.py
netwatch/enricher/: ip_info.py  oui_db.py  topology.py
netwatch/mcp_server/: server.py  tools.py
netwatch/reporter/: daily.py  export.py  isp_evidence.py  monthly.py  renderer.py  weekly.py
netwatch/storage/: csv_reader.py  csv_writer.py
tests/: test_archiver.py  test_config.py  test_csv_reader.py  test_csv_writer.py  test_dns.py  test_ip_info.py  test_latency.py  test_mcp_tools.py  test_reporters.py  test_scheduler.py  test_speed.py  test_topology.py
